# rask

./: .gitignore  CLAUDE.md  CNAME  COMPILER_PROMPT.md  COMPILER_READINESS.md  CORE_DESIGN.md  DESIGN_CHALLENGES.md  HANDOVER.md  IMPLEMENTATION_STATUS.md  KNOWN_BUGS.md  LANGUAGE_GUIDE.md  LICENSE-MIT.md  METRICS.md  NORTH_STAR.md  PARALLEL_TASKS.md  PARALLEL_TASKS_2.md  PARALLEL_TASKS_3.md  PLAN.md  PLAN_PROMPTS.md  PROGRESSIVE_COMPLEXITY.md  RASK_EXPLAINED.md  README.md  REFINEMENT_PROTOCOL.md  REFINEMENT_SUMMARY_expression-scoped-borrowing.md  REVIEW.md  ROADMAP.md  SPEC_AUDIT.md  TODO.md  TODO_CRITICAL.md  WALKTHROUGH.md  WHY_RASK.md  index.html  landing.css  test_channels.rask  test_spawn_raw.rask  test_spawn_thread.rask  test_thread_detach.rask
compiler/: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPILER.md  Cargo.toml  README.md  TODO.md  test_file_io.rask
compiler/crates/rask-ast/: Cargo.toml
compiler/crates/rask-ast/src/: decl.rs  expr.rs  lib.rs  span.rs  stmt.rs  token.rs
compiler/crates/rask-c-parse/: Cargo.toml
compiler/crates/rask-c-parse/src/: lexer.rs  lib.rs  parser.rs  tests.rs  translate.rs
compiler/crates/rask-cli/: Cargo.toml
compiler/crates/rask-cli/src/: help.rs  main.rs  output.rs
compiler/crates/rask-cli/src/commands/: analysis.rs  audit.rs  build.rs  cache.rs  codegen.rs  compile.rs  deps.rs  derive.rs  fetch.rs  init.rs  keys.rs  link.rs  mod.rs  phase.rs  pipeline.rs  publish.rs  run.rs  specs.rs  tools.rs  vendor.rs  watch.rs
compiler/crates/rask-cli/tests/: compile_run.rs
compiler/crates/rask-cli/tests/fixtures/: arithmetic.rk  auto_generic_single_letter.rk  closures.rk  comptime_div_zero.rk  comptime_overflow.rk  control_flow.rk  copy_rebind.rk  ensure_continuation.rk  enums.rk  hello.rk  multi_func.rk  mutex_field_lock.rk  overflow_add.rk  overflow_boundary.rk  overflow_div_min.rk  overflow_div_zero.rk  overflow_mul.rk  overflow_neg.rk  overflow_roundtrip.rk  overflow_shift.rk  overflow_sub.rk  panic_ensure_capture.rk  panic_ensure_e2.rk  (+9 more)
compiler/crates/rask-codegen/: Cargo.toml
compiler/crates/rask-codegen/src/: builder.rs  closures.rs  debug_info.rs  dispatch.rs  layouts.rs  lib.rs  module.rs  tests.rs  types.rs  vtable.rs
compiler/crates/rask-compiler/: Cargo.toml
compiler/crates/rask-compiler/src/: comptime_eval.rs  derive.rs  lib.rs
compiler/crates/rask-compiler/tests/: pipeline.rs
compiler/crates/rask-comptime/: Cargo.toml
compiler/crates/rask-comptime/src/: lib.rs
compiler/crates/rask-describe/: Cargo.toml
compiler/crates/rask-describe/src/: extract.rs  lib.rs  text.rs  types.rs
compiler/crates/rask-desugar/: Cargo.toml
compiler/crates/rask-desugar/src/: defaults.rs  lib.rs
compiler/crates/rask-diagnostics/: Cargo.toml
compiler/crates/rask-diagnostics/src/: codes.rs  convert.rs  formatter.rs  json.rs  lib.rs  suggestions.rs
compiler/crates/rask-effects/: Cargo.toml
compiler/crates/rask-effects/src/: frozen.rs  infer.rs  lib.rs  sources.rs  warnings.rs
compiler/crates/rask-fmt/: Cargo.toml
compiler/crates/rask-fmt/src/: comment.rs  config.rs  lib.rs  printer.rs
compiler/crates/rask-hidden-params/: Cargo.toml
compiler/crates/rask-hidden-params/src/: callgraph.rs  collect.rs  lib.rs  resolve.rs  rewrite.rs
compiler/crates/rask-interp/: Cargo.toml
compiler/crates/rask-interp/src/: build_context.rs  drift.rs  env.rs  interp.rs  lib.rs  method_names.rs  resource.rs  value.rs
compiler/crates/rask-interp/tests/: drift_test.rs
compiler/crates/rask-lexer/: Cargo.toml
compiler/crates/rask-lexer/src/: lexer.rs  lib.rs
compiler/crates/rask-lint/: Cargo.toml
compiler/crates/rask-lint/src/: idiom.rs  lib.rs  naming.rs  rules.rs  style.rs  types.rs  util.rs
compiler/crates/rask-lsp/: Cargo.toml
compiler/crates/rask-lsp/src/: backend.rs  completion.rs  convert.rs  format.rs  goto.rs  hover.rs  incremental.rs  inlay_hints.rs  main.rs  position_index.rs  references.rs  semantic_tokens.rs  server.rs  signature_help.rs  symbols.rs  type_format.rs  util.rs
compiler/crates/rask-mir/: Cargo.toml
compiler/crates/rask-mir/src/: builder.rs  closures.rs  display.rs  function.rs  lib.rs  operand.rs  program.rs  stmt.rs  types.rs
compiler/crates/rask-miri/: Cargo.toml
compiler/crates/rask-miri/src/: eval.rs  intrinsics.rs  lib.rs  memory.rs  stdlib.rs
compiler/crates/rask-mono/: Cargo.toml
compiler/crates/rask-mono/src/: instantiate.rs  layout.rs  lib.rs  reachability.rs
compiler/crates/rask-ownership/: Cargo.toml
compiler/crates/rask-ownership/src/: error.rs  lib.rs  state.rs
compiler/crates/rask-parser/: Cargo.toml
compiler/crates/rask-parser/src/: hints.rs  lib.rs  parser.rs
compiler/crates/rask-resolve/: Cargo.toml
compiler/crates/rask-resolve/src/: advisory.rs  cache.rs  capabilities.rs  error.rs  features.rs  lib.rs  lockfile.rs  package.rs  registry.rs  resolver.rs  scope.rs  semver.rs  signing.rs  symbol.rs  tarball.rs
compiler/crates/rask-rt/: Cargo.toml
compiler/crates/rask-rt/src/: cancel.rs  channel.rs  context.rs  lib.rs  mutex.rs  select.rs  shared.rs  spawn.rs  timeout.rs
compiler/crates/rask-semantic-hash/: Cargo.toml
compiler/crates/rask-semantic-hash/src/: hasher.rs  lib.rs  merkle.rs
compiler/crates/rask-spec-test/: Cargo.toml
compiler/crates/rask-spec-test/src/: deps.rs  extract.rs  lib.rs  runner.rs
compiler/crates/rask-stdlib/: Cargo.toml
compiler/crates/rask-stdlib/src/: builtins.rs  lib.rs  mir_metadata.rs  registry.rs  stubs.rs  types.rs
compiler/crates/rask-types/: Cargo.toml
compiler/crates/rask-types/src/: checker.rs  lib.rs  traits.rs  types.rs
compiler/crates/rask-wasm/: Cargo.toml
compiler/crates/rask-wasm/src/: lib.rs
compiler/docs/: 01-pipeline.md  02-types.md  03-interpreter.md  04-codegen.md  05-maintainer.md
compiler/runtime/: Makefile  alloc.c  args.c  atomic.c  bench.c  channel.c  green.c  io_engine.h  io_epoll_engine.c  io_uring_engine.c  map.c  panic.c  path.c  pool.c  ptr.c  random.c  rask_runtime.h  runtime.c  simd.c  string.c  sync.c  test.c  thread.c  time.c  vec.c
compiler/scripts/: setup-path.sh
(+800 files in other folders)
