# SPDX-License-Identifier: (MIT OR Apache-2.0)
[workspace]
resolver = "2"
members = [
    "crates/rask-ast",
    "crates/rask-lexer",
    "crates/rask-parser",
    "crates/rask-resolve",
    "crates/rask-desugar",
    "crates/rask-types",
    "crates/rask-comptime",
    "crates/rask-ownership",
    "crates/rask-diagnostics",
    "crates/rask-interp",
    "crates/rask-stdlib",
    "crates/rask-cli",
    "crates/rask-lsp",
    "crates/rask-spec-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/rask"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
logos = "0.14"
