# SPDX-License-Identifier: (MIT OR Apache-2.0)
[package]
name = "rask-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
rask-ast = { path = "../rask-ast" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
rask-desugar = { path = "../rask-desugar" }
rask-comptime = { path = "../rask-comptime" }
rask-resolve = { path = "../rask-resolve" }
rask-types = { path = "../rask-types" }
rask-ownership = { path = "../rask-ownership" }
rask-effects = { path = "../rask-effects" }
rask-diagnostics = { path = "../rask-diagnostics" }
rask-stdlib = { path = "../rask-stdlib" }
rask-mono = { path = "../rask-mono" }
rask-mir = { path = "../rask-mir" }
