[package]
name = "rask-diagnostics"
version.workspace = true
edition.workspace = true

[dependencies]
rask-ast = { path = "../rask-ast", features = ["serde"] }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
rask-resolve = { path = "../rask-resolve" }
rask-types = { path = "../rask-types" }
rask-ownership = { path = "../rask-ownership" }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
