# SPDX-License-Identifier: (MIT OR Apache-2.0)
[package]
name = "rask-interp"
version.workspace = true
edition.workspace = true

[dependencies]
rask-ast = { path = "../rask-ast" }
rask-comptime = { path = "../rask-comptime" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
rask-types = { path = "../rask-types" }
thiserror.workspace = true

[dev-dependencies]
rask-stdlib = { path = "../rask-stdlib" }
