# SPDX-License-Identifier: (MIT OR Apache-2.0)
[package]
name = "rask-lint"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
rask-ast = { path = "../rask-ast" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
