[package]
name = "rask-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rask-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rask-ast = { path = "../rask-ast" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
rask-desugar = { path = "../rask-desugar" }
rask-resolve = { path = "../rask-resolve" }
rask-types = { path = "../rask-types" }
rask-ownership = { path = "../rask-ownership" }
rask-diagnostics = { path = "../rask-diagnostics" }
