# SPDX-License-Identifier: (MIT OR Apache-2.0)
[package]
name = "rask-resolve"
version.workspace = true
edition.workspace = true

[dependencies]
rask-ast = { path = "../rask-ast" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
