# SPDX-License-Identifier: (MIT OR Apache-2.0)
[package]
name = "rask-resolve"
version.workspace = true
edition.workspace = true

[dependencies]
rask-ast = { path = "../rask-ast" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
