# SPDX-License-Identifier: (MIT OR Apache-2.0)
[package]
name = "rask-spec-test"
version.workspace = true
edition.workspace = true
description = "Literate testing: extract and run code blocks from spec markdown files"

[dependencies]
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
rask-desugar = { path = "../rask-desugar" }
rask-resolve = { path = "../rask-resolve" }
rask-types = { path = "../rask-types" }
rask-ownership = { path = "../rask-ownership" }
rask-interp = { path = "../rask-interp" }
