# SPDX-License-Identifier: (MIT OR Apache-2.0)

[package]
name = "rask-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Rask compiler crates
rask-interp = { path = "../rask-interp" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
rask-desugar = { path = "../rask-desugar" }
rask-diagnostics = { path = "../rask-diagnostics" }
rask-ast = { path = "../rask-ast" }

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary
strip = true           # Remove debug symbols
