# SPDX-License-Identifier: (MIT OR Apache-2.0)

[package]
name = "rask-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Rask compiler crates
rask-interp = { path = "../rask-interp" }
rask-lexer = { path = "../rask-lexer" }
rask-parser = { path = "../rask-parser" }
rask-desugar = { path = "../rask-desugar" }
rask-resolve = { path = "../rask-resolve" }
rask-types = { path = "../rask-types" }
rask-ownership = { path = "../rask-ownership" }
rask-diagnostics = { path = "../rask-diagnostics" }
rask-ast = { path = "../rask-ast" }
